feat: REST API 요청에 따른 백엔드 처리 - main 페이지 API 1차 구현 완료 - (랜덤매칭 관련 API를 제외한)box 페이지 API 1차 구현 완료 - profile 관련 API 구현 추가
